# matmul-playground

./: CMakeLists.txt  Dockerfile  README.md  profile.sh
include/batched-gemm/: batched_gemm.cuh  helper.h
scripts/: shmem_layout_viz.py
src/: cublas_benchmark.cu  cublas_matmul.cu  cute_debug.cuh  cute_utils.cuh  cutlass_batched_gemm.cu  device_utils.cuh  host_util.cuh  host_utils.cuh  kernel1.cu  kernel10.cu  kernel10.ptx  kernel11.cu  kernel2.cu  kernel2_cute.cu  kernel3.cu  kernel4.cu  kernel4_cute.cu  kernel5.cu  kernel6.cu  kernel7.cu  kernel7.cu.old  kernel8.cu  kernel9.cu  kernel_launch.cuh  main.cpp  main.cu  matmul.cu  my_matmul.cu  old_kernel5.cu  old_kernel6.cu  runner.cu  structs_n_stuff.cuh  tensorcore_helloworld.cu  tensorcore_helloworld_practice.cu  test.cu  util.cuh
src/kernels/: device_utils.cuh  fp32_blocktiling.cuh  memcpy.cuh  tensorcore_1.cuh  tensorcore_128x128x128.cuh  tensorcore_16x8x16_fp16.cuh  tensorcore_2.cuh  tensorcore_3.cuh  tensorcore_4.cuh  tensorcore_5.cuh  tensorcore_6.cuh  tensorcore_64x64x64.cuh  tensorcore_tile.cuh
src/kernels/fp16/: fp16_basic.cuh  tensorcore_naive.cuh
src/kernels/fp32/: device_utils.cuh  fp32_blocktiling.cuh  fp32_warptiling.cuh
src/tmp/: kernel10.cu  kernel11.cu
test/: test_helpers.cu
tmp/: async.cu
